changed the footer to be sticky to prevent it from overlapping the body content, added gallery preview image that links to sculpture page, styled to grow and shrink with min and max width of body content

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,6 +9,14 @@ body {
     font-weight: 300;
     margin: 0 144px;
     color: rgb(10, 10, 10);
+    max-width: 1080px;
+}
+
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    min-width: 672px;
 }
 
 header {
@@ -17,6 +25,7 @@ header {
     justify-content: space-between;
     padding: 48px 0;
     margin: 0; 
+    
 }
 
 .header-title {
@@ -36,7 +45,7 @@ header {
 
 .navbar-item {
     text-decoration: none;
-    margin: 0 48px 0 0;
+    margin: 0 0 0 48px;
     color: rgb(10, 10, 10);
     padding-bottom: 4px;
     border-bottom: 1px solid transparent;
@@ -48,6 +57,14 @@ header {
     color: rgb(10, 10, 10);  
 }
 
+.first-item {
+    margin-left: 24px;
+}
+
+.last-item {
+    margin-right: 4px;
+}
+
 h1 {
     font-family: "Poppins", Arial, Helvetica, sans-serif;
     font-weight: 200;
@@ -57,9 +74,14 @@ h1 {
 }
 
 footer {
-    display: flex;
+    /* display: flex;
     position: absolute;
-    bottom: 2rem;
+    bottom: 2rem; */
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-shrink: 0;
+    padding-bottom: 48px;
 }
 
 p {
@@ -72,14 +94,42 @@ p {
     color: rgb(10, 10, 10);
 }
 
-.last-item {
-    margin: 0;
-}
-
 .footer-title {
     font-family: "Poppins", Arial, Helvetica, sans-serif;
     font-weight: 200;
     text-transform: uppercase;
     letter-spacing: 2px;
     margin: 0;
+}
+
+.gallery-preview {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 65vh; 
+    width: calc(100vw - 288px);
+    overflow: hidden; 
+    position: relative;
+    max-width: 1080px;
+    min-width: 672px;
+    min-height: 625px;
+    margin: 48px 0;
+    flex-grow: 1;
+}
+
+.img-link_sculpture {
+    display: block;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.gallery-img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+    position: relative;
+    display: block;
 }
